Use Simply Static export and remove emoji

--- a/judo-suits/index.html
+++ b/judo-suits/index.html
@@ -775,8 +775,8 @@ body.colors-custom,
 			</aside><!-- .widget-area -->
 
 	<div class="site-info">
-		<a href="https://wordpress.org/" class="imprint">
-		Proudly powered by WordPress	</a>
+		<!-- <a href="https://wordpress.org/" class="imprint">
+		Proudly powered by WordPress	</a> -->
 </div>
 <!-- .site-info -->
 			</div>
