replcae email by the gmail

--- a/index.html
+++ b/index.html
@@ -2503,7 +2503,7 @@ img.emoji {
 																															class="n2-font-e940a27d546b08b925cc900f463f8e67-paragraph  n2-style-b35834208f56f667ace2a5559dad8be2-heading  ">
 																															CONTACT<br>
 																															EMAIL:
-																															info@northshorejudo.co.nz<br>
+																															northshorejudo@gmail.com<br>
 																															PHONE:
 																															027
 																															891
