--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en-NZ"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang="en-NZ"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9" lang="en-NZ"> <![endif]-->
 <!--[if gt IE 8]><!-->
-<html class="no-js">
+<html class="no-js" lang="en-NZ">
 <!--<![endif]-->
 
 <head>
@@ -12,7 +12,7 @@
 	<!--[if IE]>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<![endif]-->
-	<meta name="description" content="">
+	<meta name="description" content="North Shore Judo in Takapuna, Auckland. Judo classes for kids, teens, and adults. Beginners welcome. Train in our new competition-size dojo. Sign up for a free class. Known as the best judo club in Auckland. Rated 5 stars.">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 
@@ -108,7 +108,8 @@
 	</div>
 
 	<div id="canvas">
-		<div id="box_wrapper">
+		<div id="box_wrapper" role="main">
+			<h1 class="sr-only">North Shore Judo — Judo classes in Auckland, NZ</h1>
 
 			<!--topline section visible only on small screens|-->
 			<!-- <section class="page_topline ds c-my-10 s-borderbottom  d-lg-none ls">
@@ -143,7 +144,7 @@
 								<!-- main nav start -->
 								<nav class="top-nav">
 									<ul class="nav sf-menu">
-										<a href="#box_wrapper">Home</a>
+										<li><a href="#box_wrapper">Home</a></li>
 										<li>
 											<a href="#about">About</a>
 										</li>
@@ -467,7 +468,7 @@
 							<div class="container" style="margin-top:48px;">
 								<div class="row justify-content-center">
 									<div class="col-12 col-md-4 text-center mx-auto">
-										<a href="https://northshorejudo.co.nz/join?src=website" target="_blank" class="btn btn-maincolor btn-lg btn-block">Sign up now</a>
+										<a href="https://northshorejudo.co.nz/join?src=website" target="_blank" rel="noopener noreferrer" class="btn btn-maincolor btn-lg btn-block">Sign up now</a>
 									</div>
 								</div>
 							</div>
@@ -526,7 +527,7 @@
 					<div class="row">
 						<div class="col-12 col-lg-6">
 							<div class="faq-section-left embed-responsive embed-responsive-3by2">
-								<a href="https://www.youtube.com/embed/bZ2UA7ylLgE?controls=0" class="faq-video embed-placeholder">
+								<a href="https://www.youtube.com/embed/bZ2UA7ylLgE?controls=0" class="faq-video embed-placeholder" aria-label="Play FAQ video">
 								</a>
 							</div>
 						</div>
@@ -538,16 +539,16 @@
 								<div class="divider-40 hidden-above-md"></div>
 								<div id="accordion01" role="tablist">
 									<div class="card">
-										<div class="card-header" role="tab" id="collapse01_header">
+										<div class="card-header" id="collapse01_header">
 											<h5>
-												<a data-toggle="collapse" href="#collapse01" aria-expanded="true" aria-controls="collapse01">
+												<a id="collapse01_tab" role="tab" data-toggle="collapse" href="#collapse01" aria-expanded="true" aria-controls="collapse01" aria-selected="true">
 													<i class="fa fa-pencil"></i>
 													Do I have to be in shape?
 												</a>
 											</h5>
 										</div>
 
-										<div id="collapse01" class="collapse show" role="tabpanel" aria-labelledby="collapse01_header" data-parent="#accordion01">
+										<div id="collapse01" class="collapse show" role="tabpanel" aria-labelledby="collapse01_tab" data-parent="#accordion01">
 											<div class="card-body">
 
 												<p>Not at all. You’ll find that our classes for beginners are the perfect way to build up your overall fitness level regardless of your physical condition. Good luck!</p>
@@ -557,30 +558,30 @@
 									</div>
 
 									<div class="card">
-										<div class="card-header" role="tab" id="collapse02_header">
+										<div class="card-header" id="collapse02_header">
 											<h5>
-												<a class="collapsed" data-toggle="collapse" href="#collapse02" aria-expanded="false" aria-controls="collapse02">
+												<a id="collapse02_tab" role="tab" class="collapsed" data-toggle="collapse" href="#collapse02" aria-expanded="false" aria-controls="collapse02" aria-selected="false">
 													<i class="fa fa-pencil"></i>
 													Can I come and watch a class?
 												</a>
 											</h5>
 										</div>
-										<div id="collapse02" class="collapse" role="tabpanel" aria-labelledby="collapse02_header" data-parent="#accordion01">
+										<div id="collapse02" class="collapse" role="tabpanel" aria-labelledby="collapse02_tab" data-parent="#accordion01">
 											<div class="card-body">
 												Of course! We encourage anyone interested in judo, whether potential members or curious observers, to come and watch a class. This gives you a firsthand look at our training environment and teaching methods. Feel free to visit, ask questions, and experience the dynamic atmosphere at North Shore Judo.
 											</div>
 										</div>
 									</div>
 									<div class="card">
-										<div class="card-header" role="tab" id="collapse03_header">
+										<div class="card-header" id="collapse03_header">
 											<h5>
-												<a class="collapsed" data-toggle="collapse" href="#collapse03" aria-expanded="false" aria-controls="collapse02">
+												<a id="collapse03_tab" role="tab" class="collapsed" data-toggle="collapse" href="#collapse03" aria-expanded="false" aria-controls="collapse03" aria-selected="false">
 													<i class="fa fa-pencil"></i>
 													Am I too old to start Judo?
 												</a>
 											</h5>
 										</div>
-										<div id="collapse03" class="collapse" role="tabpanel" aria-labelledby="collapse03_header" data-parent="#accordion01">
+										<div id="collapse03" class="collapse" role="tabpanel" aria-labelledby="collapse03_tab" data-parent="#accordion01">
 											<div class="card-body">
 												Absolutely not! Judo is a sport for people of all ages. Whether you're a teenager or a senior, you can start learning and enjoying the benefits of judo. Our classes are designed to accommodate individuals at different stages of life, ensuring everyone can participate and progress at their own pace.
 											</div>
@@ -588,15 +589,15 @@
 									</div>
 
 									<div class="card">
-										<div class="card-header" role="tab" id="collapse04_header">
+										<div class="card-header" id="collapse04_header">
 											<h5>
-												<a class="collapsed" data-toggle="collapse" href="#collapse04" aria-expanded="false" aria-controls="collapse04">
+												<a id="collapse04_tab" role="tab" class="collapsed" data-toggle="collapse" href="#collapse04" aria-expanded="false" aria-controls="collapse04" aria-selected="false">
 													<i class="fa fa-pencil"></i>
 													Will I get hurt?
 												</a>
 											</h5>
 										</div>
-										<div id="collapse04" class="collapse" role="tabpanel" aria-labelledby="collapse04_header" data-parent="#accordion01">
+										<div id="collapse04" class="collapse" role="tabpanel" aria-labelledby="collapse04_tab" data-parent="#accordion01">
 											<div class="card-body">
 												Our skilled coaches prioritize safety through guided training and proper technique, ensuring you can enjoy judo with minimized risks. Your safety is our topmost priority at North Shore Judo.
 											</div>
@@ -700,21 +701,22 @@
 
 								<ul>
 									<li>
-										<a href="https://www.ijf.org/?ref=northshorejudo">
+										<a href="https://www.ijf.org/?ref=northshorejudo" aria-label="International Judo Federation website">
 											<img src="/images/new/IJF-logo.webp" alt="IJF logo" width="64" height="64">
 											<br><br>International Judo Federation
 										</a>
 									</li>
 									<li>
-										<a href="https://www.judonz.org/?ref=northshorejudo">
+										<a href="https://www.judonz.org/?ref=northshorejudo" aria-label="New Zealand Judo Federation website">
 											<img src="/images/new/nzjffernw-logo.webp" alt="NZJF logo" width="64" height="64">
 											<br><br>New Zealand Judo Federation
 										</a>
 									</li>
 									<li>
-										<a href="https://www.judoauckland.co.nz/?ref=northshorejudo">
+										<a href="https://www.judoauckland.co.nz/?ref=northshorejudo" aria-label="Auckland Judo Association website">
 											<img src="/images/new/akljudo-logo.webp" alt="AKL Judo logo" width="64" height="64">
 											<br><br>Auckland Judo Association
+										</a>
 									</li>
 								</ul>
 							</div>
@@ -723,7 +725,7 @@
 
 						<div class="col-md-6 col-lg-4 text-center animate" data-animation="fadeInUp">
 							<div class="widget widget_icons_list">
-								<a href="./" class="logo flex-column text-center">
+								<a href="./" class="logo flex-column text-center" aria-label="North Shore Judo home">
 									<img src="images/new/logo.webp" alt="logo">
 								</a>
 								<p>The North Shore Judo Academy was founded in 1969 by Sensei Ron Jones (5th dan) and has shared a love of Judo with thousands of players in that time, including the current coaching team.</p>
