Update button to redirect to classes section for free class sign-up

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 															<br>to train your Judo.
 													</div>
 													<div class="intro_layer button" data-animation="fadeInLeft">
-														<button class="btn btn-maincolor intro_button">get a free lesson</button>
+														<button onclick="location.href='#classes'" class="btn btn-maincolor intro_button">GET A FREE CLASS</button>
 													</div>
 												</div> <!-- eof .intro_layers -->
 											</div> <!-- eof .intro_layers_wrapper -->
