--- a/index.html
+++ b/index.html
@@ -736,7 +736,7 @@
 								</div> -->
 							</div>
 						</div>
-<!-- 
+						<!-- 
 						<div class="col-md-6 col-lg-4 text-center animate" data-animation="fadeInUp">
 							<div class="widget widget_mailchimp">
 
@@ -776,9 +776,8 @@
 								
 							</div>
 						</div> -->
-
-
 						<div class="divider-70 d-none d-xl-block"></div>
+						<p style="margin-bottom: 25px;" class="small-text mt-2"><a href="https://clubware.app?ref=nsj" target="_blank" rel="noopener" aria-label="Clubware member management and payments">Member management &amp; payments by Clubware</a></p>
 					</div>
 				</div>
 			</footer>
