clarify Clubware[.APP] in footer

--- a/index.html
+++ b/index.html
@@ -777,7 +777,7 @@
 							</div>
 						</div> -->
 						<div class="divider-70 d-none d-xl-block"></div>
-						<p style="margin-bottom: 25px;" class="small-text mt-2"><a href="https://clubware.app?ref=nsj" target="_blank" rel="noopener" aria-label="Clubware member management and payments">Member management &amp; payments by Clubware</a></p>
+						<p style="margin-bottom: 25px;" class="small-text mt-2"><a href="https://clubware.app?ref=nsj" target="_blank" rel="noopener" aria-label="Clubware member management and payments">Member management &amp; payments by Clubware.app</a></p>
 					</div>
 				</div>
 			</footer>
